@@ -1,34 +1,34 @@
 package com.equifax.service;
 
-import com.equifax.domain.*;
-import java.time.LocalDate;
-import java.time.Period;
+import com.equifax.domain.Account;
+import com.equifax.domain.Client;
+import com.equifax.domain.Event;
+import com.equifax.domain.LenderInquiry;
+
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
- * Service pour la gestion des clients : recherche, totalisation des comptes,
- * calcul du credit score et envoi de notifications.
+ * Service pour gérer les opérations sur les clients
  */
 public class ClientService {
-    private static final double BASE_SCORE = 600;
 
     /**
-     * Recherche les clients dont le nom de famille correspond (insensible à la casse).
-     * Utilise une expression lambda pour filtrer la liste.
-     * @param clients liste de clients à rechercher
-     * @param lastName nom de famille recherché
-     * @return liste des clients trouvés
+     * Recherche les clients par nom de famille en utilisant une expression lambda
+     * @param clients Liste de clients
+     * @param lastName Nom de famille à rechercher
+     * @return Liste des clients correspondants
      */
     public List<Client> searchClientByLastName(List<Client> clients, String lastName) {
         return clients.stream()
-                .filter(c -> c.getLastName() != null && c.getLastName().equalsIgnoreCase(lastName))
-                .toList();
+                .filter(c -> c.getLastName().equalsIgnoreCase(lastName))
+                .collect(Collectors.toList());
     }
 
     /**
-     * Calcule la somme des soldes de tous les comptes du client.
-     * @param client client
-     * @return total des soldes
+     * Calcule le total des balances de tous les comptes d'un client
+     * @param client Le client
+     * @return Le total des balances
      */
     public double calculateTotalBalance(Client client) {
         return client.getAccounts().stream()
@@ -37,95 +37,75 @@ public class ClientService {
     }
 
     /**
-     * Calcule la limite totale de crédit du client.
-     */
-    public double calculateTotalLimit(Client client) {
-        return client.getAccounts().stream()
-                .mapToDouble(Account::getLimit)
-                .sum();
-    }
-
-    /**
-     * Calcule le ratio d'utilisation du crédit.
-     */
-    public double calculateUtilizationRatio(Client client) {
-        double totalLimit = calculateTotalLimit(client);
-        if (totalLimit <= 0) return 0.0;
-        return calculateTotalBalance(client) / totalLimit;
-    }
-
-    private double calculateEventPenalty(Client client) {
-        double penalty = 0.0;
-        for (Event e : client.getEvents()) {
-            String t = e.getType();
-            switch (t) {
-                case "BANKRUPTCY" -> penalty += 150 + 0.05 * e.getAmount();
-                case "BAD_CHEQUE" -> penalty += 50 + 0.02 * e.getAmount();
-                case "ACCOUNT_CLOSED" -> penalty += 30;
-                case "DEBT_COLLECTION_AGENCY" -> penalty += 100 + 0.03 * e.getAmount();
-                default -> penalty += 20; // other minor events
-            }
-        }
-        return penalty;
-    }
-
-    private double calculateInquiryPenalty(Client client) {
-        double penalty = 0.0;
-        LocalDate now = LocalDate.now();
-        for (LenderInquiry li : client.getInquiries()) {
-            Period p = Period.between(li.getDate(), now);
-            int days = p.getDays() + p.getMonths() * 30 + p.getYears() * 365;
-            if (days <= 90) penalty += 10;
-            else if (days <= 365) penalty += 5;
-        }
-        return penalty;
-    }
-
-    private double calculateAccountBonus(Client client) {
-        int count = client.getAccounts().size();
-        double bonus = count * 15; // 15 points per account
-        boolean hasCredit = client.getAccounts().stream()
-                .anyMatch(a -> a.getType().toLowerCase().contains("credit"));
-        boolean hasSavings = client.getAccounts().stream()
-                .anyMatch(a -> a.getType().toLowerCase().contains("savings") || a.getType().toLowerCase().contains("chequing"));
-        if (hasCredit && hasSavings) bonus += 10; // diversity
-        if (count == 0) bonus -= 50; // penalty if no account
-        return bonus;
-    }
-
-    /**
-     * Met à jour le creditScore du client selon comptes, événements et demandes.
-     * Le score final est lissé puis borné entre 300 et 900.
-     * @param client client à mettre à jour
+     * Met à jour le score de crédit d'un client selon l'algorithme défini
+     * @param client Le client dont le score doit être mis à jour
      */
     public void updateCreditScore(Client client) {
-        double prev = client.getCreditScore();
-        double score = BASE_SCORE;
+        double score = 600.0; // Score de base
 
-        double utilization = calculateUtilizationRatio(client);
-        double utilPenalty = utilization * 300;
+        // Bonus pour nombre de comptes (calculé en premier)
+        int accountCount = client.getAccounts().size();
+        if (accountCount > 3) {
+            score += 20;
+        } else if (accountCount == 0) {
+            score -= 50;
+        }
 
-        double eventPenalty = calculateEventPenalty(client);
-        double inquiryPenalty = calculateInquiryPenalty(client);
-        double accountBonus = calculateAccountBonus(client);
+        // Analyse des comptes
+        double totalBalance = 0;
+        double totalLimit = 0;
 
-        score = score - utilPenalty - eventPenalty - inquiryPenalty + accountBonus;
+        for (Account account : client.getAccounts()) {
+            totalBalance += account.getBalance();
+            totalLimit += account.getLimit();
+        }
 
-        // smoothing
-        score = prev * 0.25 + score * 0.75;
+        // Calcul du ratio d'utilisation du crédit
+        if (totalLimit > 0) {
+            double utilizationRatio = totalBalance / totalLimit;
+            if (utilizationRatio < 0.3) {
+                score += 50; // Faible utilisation
+            } else if (utilizationRatio > 0.7) {
+                score -= 50; // Utilisation élevée
+            }
+        }
 
-        // clamp
+        // Analyse des événements financiers
+        for (Event event : client.getEvents()) {
+            switch (event.getType()) {
+                case BAD_CHEQUE:
+                    score -= 30;
+                    break;
+                case ACCOUNT_CLOSED:
+                    score -= 20;
+                    break;
+                case BANKRUPTCY:
+                    score -= 150;
+                    break;
+                case DEBT_COLLECTION_AGENCY:
+                    score -= 100;
+                    break;
+            }
+        }
+
+        // Analyse des demandes de crédit
+        int inquiryCount = client.getInquiries().size();
+        if (inquiryCount > 5) {
+            score -= (inquiryCount - 5) * 10; // Pénalité pour trop de demandes
+        }
+
+        // Limiter le score entre 300 et 900
         score = Math.max(300, Math.min(900, score));
 
         client.setCreditScore(score);
     }
 
     /**
-     * Envoie une notification au client (ajoute au champ messages).
-     * @param client client destinataire
-     * @param message contenu du message
+     * Envoie une notification à un client
+     * @param client Le client destinataire
+     * @param message Le message à envoyer
      */
     public void sendNotification(Client client, String message) {
-        client.addMessage(message);
+        client.getMessages().add(message);
     }
 }
